--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
 MONGO_URL=mongodb+srv://trananhtuongvi:KimAnh2300@doantotnghiep.boruqh4.mongodb.net/doantotnghiep?retryWrites=true&w=majority
 NODE_ENV=development
+JWT_SECRET=KimAnh2300
